# hydrots

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: input_climatology.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: example.py
src/hydrots/: __init__.py  cli.py  dynamicmodel.py  fluxes.py  hydrots.py  models.py  newtonraphson.py  objectivefuns.py  parameters.py  signature.py  summary.py  timeseries.py  unithydrographs.py  validator.py
src/hydrots/summary/: base.py  baseflow.py  summary.py
tests/: __init__.py  conftest.py  test_hydrots.py  test_summary_no_flow_events.py
