[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrots"
version = "0.1.0"
description = "A framework for hydrological time series analysis and modelling"
readme = "README.rst"
authors = [
  {name = "Simon Moulds", email = "sim.moulds@gmail.com"}
]
maintainers = [
  {name = "Simon Moulds", email = "sim.moulds@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/simonmoulds/hydrots/issues"
changelog = "https://github.com/simonmoulds/hydrots/blob/master/changelog.md"
homepage = "https://github.com/simonmoulds/hydrots"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

